--- a/problem_set_5.qmd
+++ b/problem_set_5.qmd
@@ -14,6 +14,10 @@ Please upload your completed assignment to the ELMs course site (under the assig
 
 **Total points: 25**
 
+```{r}
+library(scales)
+```
+
 ## Question 1
 
 *Total points: 6*
@@ -36,6 +40,10 @@ tibble::tibble(
 
 *Points: 2*
 
+::: callout-note
+2/2
+:::
+
 What is the probability of being 25-30 or a non-voter?
 
 ```{r}
@@ -47,6 +55,10 @@ Answer: P(25-30 or non-voter) = P(25-30) + P(non-voter) - P (25-30 & non-voter) 
 ### Part B
 
 *Points: 4*
+
+::: callout-note
+1/4
+:::
 
 Assuming a normal distribution, report the 95% confidence intervals for the percentage of 18-to-24-year-olds who did not vote, and then the percentage of 25-to-30-year-olds who did not vote.
 
@@ -67,6 +79,36 @@ se_2 <- sqrt((40/90)*(1-40/90)/90) # s.e.
 
 Answer_2: The 95% CIs for the percentage of 25-30 years old who did not vote is 0.342 to 0.547
 
+::: callout-tip
+The probability that an individual is 18-to-24 and a non-voter is not conditional. Therefore, you look at the proportion of the whole population who meet those criteria.
+
+$$
+\hat{p} = Pr(18\ to\ 24 \& NV) = \frac{70}{1000} = 0.07 
+$$
+
+And:
+
+$$
+n = 1000
+$$
+
+Therefore:
+
+$$
+SE(\hat{p}) = \sqrt{\frac{0.07 * 0.93}{1000}} = 0.008068457
+$$
+
+The 95% confidence interval can be found:
+
+$$
+\hat{p} \pm 1.96*SE(\hat{p})
+$$
+
+Therefore, the 95% confidence interval for the percentage of 18-to-24-year-olds who did not vote is `r percent(0.07 - 1.96 * 0.008068457, accuracy = 0.01)` to `r percent(0.07 + 1.96 * 0.008068457, accuracy = 0.01)`.
+
+Using the same method, the 95% confidence intervals for the percentage of 25-to-30-year-olds who did not vote is `r percent(0.04 - 1.96*0.006196773, accuracy = 0.01)` to `r percent(0.04 + 1.96*0.006196773, accuracy = 0.01)`.
+:::
+
 ## Question 2
 
 *Total points:* *7*
@@ -76,6 +118,10 @@ Assume that the standard deviation for the population distribution of a state in
 ### Part A
 
 *Points: 3*
+
+::: callout-note
+3/3
+:::
 
 Calculate the spread of the sampling distribution for each of the following sample sizes: 1, 4, 25, 100, 250, 1000, 5,000, and 10,000.
 
@@ -97,6 +143,10 @@ Answer: The standard deviation of the sampling distribution is as follows: 200, 
 
 *Points: 1*
 
+::: callout-note
+1/1
+:::
+
 Describe specifically how the variability of the sampling distribution changes as the sample size varies. Considering the expense of running a poll, which sample size do you think is most optimal if conducting the poll?
 
 Answer: As the sample size expands, the variability of the sampling distribution goes down. For practical purposes (accuracy) of conducting a poll, 5,000 seems the best pick; while if there are further budgetary constraints, 1,000 may be the second best choice as the standard error is larger.
@@ -104,6 +154,10 @@ Answer: As the sample size expands, the variability of the sampling distribution
 ### Part C
 
 *Points: 3*
+
+::: callout-note
+3/3
+:::
 
 Display your results graphically (using R) with the sample size on the x-axis and the standard error (of the sampling distribution) on the y-axis.
 
@@ -126,6 +180,10 @@ ggplot(data, aes(x = x, y = y)) +
 
 *Points: 4*
 
+::: callout-note
+4/4
+:::
+
 Suppose you conduct a survey (to generate a sample mean of interest) and find that it has a margin of error of 4.5 with a sample size of 900 using a 95% confidence interval. What would the margin of error be for a 90% confidence interval?
 
 ```{r}
@@ -137,6 +195,10 @@ Answer: The margin of error for a 90% CI is 3.78
 ## Question 4
 
 *Points: 4*
+
+::: callout-note
+4/4
+:::
 
 Assume that, in State A, the mean income in the population is \$20,000 with a standard deviation of \$2,000. If you took an SRS of 900 individuals from that population, what is the probability that you would get a sample mean income of \$20,200 or greater? What would be the probability if the sample size was only 25?
 
@@ -160,6 +222,10 @@ Answer: For a sample size of 900, the probability of getting a sample mean large
 ## Question 5
 
 *Points: 4*
+
+::: callout-note
+4/4
+:::
 
 Assume that a coin is fair. If I flip a coin 500 times, what is a 95% confidence interval for the range of the count of heads that I will get? What if I flip the coin 5,000 times? What about 50,000 times?
 
