--- a/problem_set_6.qmd
+++ b/problem_set_6.qmd
@@ -128,13 +128,12 @@ Answer: The point estimate is the sample proportion, 0.379
 What is a 90% confidence interval around that estimate?
 
 ```{r}
-sqrt(0.4*(1-0.4)/720) # standard deviation of sample proportion
-0.0183/sqrt(720) # standard error
-0.379 + 1.645*0.00068
-0.379 - 1.645*0.00068
+std_err <- sqrt(0.4*(1-0.4)/720) # standard error
+0.379 + 1.645*std_err
+0.379 - 1.645*std_err
 ```
 
-Answer: The 90% CI is \[0.3778, 0.3801\].
+Answer: The 90% CI is \[0.349, 0.409\].
 
 ### Part C
 
