--- a/problem_set_9.qmd
+++ b/problem_set_9.qmd
@@ -20,6 +20,10 @@ Please upload your completed assignment to the ELMs course site (under the assig
 
 *Points: 10*
 
+::: callout-note
+10/10
+:::
+
 Table 1 below reports the results from two regression models. In Model 1 in Table 1 $Y$ is regressed on $X_1$ and, in Model 2, $Y$ is regressed on both $X_1$ and $X_2$. Why might $X_1$ be statistically significant at conventional levels in Model 1 but statistically insignificant in Model 2? Be as specific as possible.
 
 ![](ps9.png)
@@ -33,6 +37,10 @@ Answer:
 ## Question 2
 
 *Points: 10*
+
+::: callout-note
+8/10
+:::
 
 Using the `censusAggregate` dataset (posted on ELMs), which is survey data aggregated to the state level (1972-2000), estimate a regression with `vote` as the dependent variable and the following independent variables: `nonSouth`, `edr`, and `pcthsg`. Report the results in a professionally formatted table and interpret the regression results.
 
@@ -80,8 +88,17 @@ stargazer(m1, m2, m3, type = "text",
 Answer:
 
 1.  All of the three independent variables have a positive estimated effect on the dependent variable but their strength of prediction is not the same.
-2.  Across three models, the *percentage of high school graduates* ($pcthsg$) appears the least strongest predictor of the change in *voter turnout* ($vote$); specifically, the coefficient, though statistically significant at a 99% confidence level, decreases from Model 1 to Model 3, suggesting that the inclusion of the other two variables, *election-day registration* ($edr$) and *being a non-Southern state* ($nonSouth$), mitigates the independent effect of $psthsg$ on $vote$. For example, in Model 3, one percentage point increase in high school graduates is on average associated with 0.1% percent increase in voter turnout.
-3.  $edr$ and $nonSouth$ have a substantively stronger explanatory power for the estimated effect on $vote$, this could be observed in the increasing $R^2$ across three models. Specifically, in Model 3, allowing election-day registration ($edr = 1$) and being a non-Southern state ($nonSouth = 1$) are on average associated with a 5.792% and 5.546% increase in voter turnout, respectively.
+
+::: callout-note
+I'm not sure what you mean by "strength of prediction". I suspect you mean "the strength/size of their estimated effect".
+:::
+
+1.  Across three models, the *percentage of high school graduates* ($pcthsg$) appears the least strongest predictor of the change in *voter turnout* ($vote$); specifically, the coefficient, though statistically significant at a 99% confidence level, decreases from Model 1 to Model 3, suggesting that the inclusion of the other two variables, *election-day registration* ($edr$) and *being a non-Southern state* ($nonSouth$), mitigates the independent effect of $psthsg$ on $vote$. For example, in Model 3, one percentage point increase in high school graduates is on average associated with 0.1% percent increase in voter turnout.
+2.  $edr$ and $nonSouth$ have a substantively stronger explanatory power for the estimated effect on $vote$, this could be observed in the increasing $R^2$ across three models. Specifically, in Model 3, allowing election-day registration ($edr = 1$) and being a non-Southern state ($nonSouth = 1$) are on average associated with a 5.792% and 5.546% increase in voter turnout, respectively.
+
+::: callout-note
+... holding all other variables constant.
+:::
 
 ```{r}
 modelsummary(m1, 
@@ -101,9 +118,21 @@ Answer:
 1.  For $pcthsg$, it seems meaningless to interpret the constant on its own term as there is hardly a U.S. state that has zero high school graduates.
 2.  However, for $edr$ and $nonSouth$, the constants do have a meaningful implication. They tell the predicted voter turnout in a U.S. state where it doesn't allow election-day registration ($edr = 0$) or it is a Southern state ($nonSouth = 0$).
 
+::: callout-note
+The constant is a feature of the model as a whole. Each variable does not have its own constant. Therefore, if it is not meaningful for any one of the variables, it is not meaningful across the model.
+:::
+
 ## Question 3
 
 *Points: 5*
+
+::: callout-note
+2/5
+:::
+
+::: callout-note
+This is the wrong test. You need to compare the full model to one that only includes election day registration.
+:::
 
 Using the regression results from the previous question, evaluate the null hypothesis that the effects (i.e., regression coefficients) of `nonSouth` and `pcthsg` are jointly equal to zero. Can you reject the null hypothesis? Be sure to demonstrate how you reached a definitive conclusion.
 
@@ -117,6 +146,10 @@ Answer: To evaluate the null hypothesis that $H_0: \beta_{nonSouth}=\beta_{pcths
 ## Question 4
 
 *Points: 15*
+
+::: callout-note
+12/15
+:::
 
 Using one of the other data sets available in the `poliscidata` package pick one dependent variable and two or more independent variables. Run a regression of the dependent variable on the independent variables. In your answer, describe why you picked the variables you did, produce a professionally formatted results table, and describe your statistical and substantive findings.
 
@@ -140,12 +173,29 @@ stargazer(q4_1, q4_2, q4_3, type = "text",
 Answer:
 
 1.  Selection of Variables: I pick oil resources $oil$ (the higher meaning the country is oil-rich), economic freedom index by the Heritage Foundation $freeoverall$ (the higher meaning the country is more economically free), and literacy rate $literacy$ (the higher meaning more citizens can read and write) as independent variables. I set democracy scores $demscore14$ (the higher meaning the country is more democratic) as the dependent variable.
+
 2.  Causal logic:
+
     -   For the $oil$ variable, the Rentier State Theory argues that resource-rich countries tend to be more authoritarian as the regime can extract benefits from the resources they possess instead of doing so from its citizens (e.g., taxation), leaving them a better life quality. Hence, the citizens lack the incentive to demand democracy.
     -   For the $freeoverall$ variable, the Heritage Foundation suggests that the more economically free (e.g., open trade, labor rights protection, equal opportunity to employment) a country is, the more likely it is a democracy because diverse economic interactions help promote the strength of middle class which is crucial for democratization.
     -   For the $literacy$ variable, the more citizens can read and write, the more likely for democratization since citizens are able to overcome the hurdles to participate in politics.
     -   Combined together, I expect to see negative correlation for $oil$ but positive correlation for $freeoverall$ and $literacy$ variables with the dependent variable.
+
 3.  By reading the regression table, the estimated effect are as expected that oil-rich countries on average tend to score lower in democracy scores while economically free and high literacy countries on average tend to be more democratic.
+
     -   Yet, the tiny coefficient of $oil$, though statistically significant at the 99% confidence level, may seem problematic to the Rentier State Theory. Specifically, this coefficient suggests that one barrel increase in oil production per day is on average associated with an infinitesimal decrease in democracy score - the difference doesn't appear substantive.
+
+    ::: callout-note
+    ... holding all else constant.
+    :::
+
+    ::: callout-note
+    To be fair, one additional barrel is not a large increase in oil production. What is the effect of a 1,000 barrel increase?
+    :::
+
     -   A closer look at Model 3 indicates that economic freedom contributes more to democracy score than literacy does as the former has a larger coefficient $r_{ef}=0.112$, compared to the latter $r_l=0.027$. This may be evidence supportive for a more economically-interdependent global market across countries, i.e., globalization.
     -   Furthermore, a F-statistic of 51.396 with a p-value statistically significant at the 99% confidence level in Model 3 confirms that it is extremely unlikely that all of the three independent variables have a joint non-effect on the dependent variable.
+
+::: callout-note
+You should interpret the predicted effect of all of your variables individually and discuss their statistical significance.
+:::
